# oxsea

./: CONTRIBUTING.md  Cargo.toml  README.md
crates/oxsea/: Cargo.toml
crates/oxsea/src/: lib.rs
crates/oxsea/tests/integration/: main.rs
crates/oxsea/tests/integration/fixtures/ts/: bool.ts  bool@copy.snap  bool@ir.snap  bool@out.snap  for_of.ts  for_of@copy.snap  for_of@ir.snap  for_of@out.snap  global_ref.ts  global_ref@copy.snap  global_ref@ir.snap  global_ref@out.snap  if_else.ts  if_else@copy.snap  if_else@ir.snap  if_else@out.snap  if_else_true.ts  if_else_true@copy.snap  if_else_true@ir.snap  if_else_true@out.snap  if_else_true@out.snap.new  simple_expr.ts  simple_expr@copy.snap  simple_expr@ir.snap  simple_expr@out.snap  var_decl.ts  var_decl@copy.snap  var_decl@ir.snap  var_decl@out.snap
crates/oxsea_from_ast/: Cargo.toml
crates/oxsea_from_ast/src/: lib.rs
crates/oxsea_into_ast/: Cargo.toml
crates/oxsea_into_ast/src/: lib.rs
crates/oxsea_ir/: Cargo.toml
crates/oxsea_ir/src/: lib.rs
crates/oxsea_traverse/: Cargo.toml
crates/oxsea_traverse/src/: lib.rs  macros.rs  sort.rs  transform.rs
